crates/derive/tests/reactive/fail/05-complex-field-type.rs
use sorrow_derive::Reactive;

#[derive(Reactive)]
pub struct ComplexFieldTypes {
    complex: *const i32,
}

fn main() {}
